# mlir

./: README.ROCm.md  README.md  ROCDL.md  ROCm.md
include/mlir/Conversion/GPUToROCM/: GPUToROCMPass.h  MIOpenDriverPass.h
include/mlir/Conversion/GPUToROCm/: GPUToROCmPass.h
include/mlir/Conversion/MIOpenHighToLow/: MIOpenDriverPass.h  MIOpenHighToLow.h
include/mlir/Dialect/LLVMIR/: CMakeLists.txt  MIOpenDialect.h  MIOpenOps.td
include/mlir/LLVMIR/: CMakeLists.txt  MIOpenDialect.h  MIOpenOps.td  ROCDLOps.td
lib/Conversion/: CMakeLists.txt
lib/Conversion/GPUToROCDL/: LowerGpuOpsToROCDLOps.cpp
lib/Conversion/GPUToROCM/: CMakeLists.txt  ConvertKernelFuncToHSACO.cpp  ConvertLaunchFuncToHIPCalls.cpp  GenerateHSACOAccessors.cpp
lib/Conversion/GPUToROCm/: ConvertKernelFuncToHSACO.cpp  ConvertLaunchFuncToHIPCalls.cpp  GenerateHSACOAccessors.cpp
lib/Conversion/MIOpenHighToLow/: CMakeLists.txt  MIOpenDriverPass.cpp  MIOpenHighToLow.cpp
lib/Dialect/LLVMIR/: CMakeLists.txt
lib/Dialect/LLVMIR/IR/: MIOpenDialect.cpp
lib/LLVMIR/: CMakeLists.txt
lib/LLVMIR/IR/: MIOpenDialect.cpp  ROCDLDialect.cpp
test/: CMakeLists.txt  lit.cfg.py
test/Conversion/GPUToROCDL/: gpu-to-rocdl.mlir
test/Conversion/GPUToROCM/: lower-launch-func-to-hip.mlir
test/Conversion/GPUToROCm/: insert-hsaco-getter.mlir  lower-amdgpu-kernel-to-hsaco.mlir  lower-launch-func-to-hip.mlir
test/Conversion/MIOpenHighToLow/: miopen-end-to-end-low.mlir  miopen-end-to-end-miopen.ll  miopen-end-to-end-miopen.mlir  miopen-end-to-end.mlir  miopen-high-to-low.mlir
test/Dialect/LLVMIR/: miopen.mlir
test/LLVMIR/: rocdl.mlir
test/mlir-miopen-runner/: conv2d.mlir
test/mlir-rocm-runner/: gpu-to-hsaco.mlir
tools/: CMakeLists.txt
tools/mlir-miopen-runner/: CMakeLists.txt  mlir-miopen-runner.cpp
tools/mlir-opt/: CMakeLists.txt
tools/mlir-rocm-runner/: CMakeLists.txt  hip-runtime-wrappers.cpp  mlir-rocm-runner.cpp
tools/mlir-translate/: CMakeLists.txt
